--- a/src/app/components/bio/bio.component.html
+++ b/src/app/components/bio/bio.component.html
@@ -1,6 +1,7 @@
 <section class="section" id="bio">
   <div class="main-container">
     <h2 class="section-title zoom-out-effect">
+      <i class="fas fa-user"></i>
       Sobre Mí
     </h2>
     <div class="mode-toggle-container">
